Converted over every file to use https links.

--- a/about.html
+++ b/about.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "https://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="https://www.w3.org/1999/xhtml">
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
@@ -8,11 +8,11 @@
     <title>About Super Smiles Family Dentistry: Meet Dr. Miller, Meet the Staff</title>
     
     <link href="css/reset.css" rel="stylesheet" type="text/css" />
-    <link href='http://fonts.googleapis.com/css?family=Oxygen:400,300,700' rel='stylesheet' type='text/css' lang="english"/>
+    <link href='https://fonts.googleapis.com/css?family=Oxygen:400,300,700' rel='stylesheet' type='text/css' lang="english"/>
     <link href="css/style_supersmiles_main.css" rel="stylesheet" type="text/css" lang="english"/>
     <link href="css/style_supersmiles_hkdesign.css" rel="stylesheet" type="text/css" lang="english"/>
     
-<!-- Lightbox2 PhotoGallery - source: http://lokeshdhakar.com/projects/lightbox2/ -->
+<!-- Lightbox2 PhotoGallery - source: https://lokeshdhakar.com/projects/lightbox2/ -->
     <link href="js_lightbox/css/lightbox.css" rel="stylesheet" />
     <script type="text/javascript" src="js_lightbox/js/jquery-1.11.0.min.js"></script>
 	<script type="text/javascript" src="js_lightbox/js/lightbox.min.js"></script>
@@ -75,7 +75,7 @@
 					Dr. Miller is a highly experienced dentist having graduated Cum Laude from Boston University Goldman School of Dentistry in 2005.  Dr. Miller started her dental career in under-served communities in Roxbury and Dorchester, and practiced in several more locations in Massachusetts before establishing her own dental practice in Burlington, MA. .  In 2006, she was appointed to the position of Director of the Dental Department at Geiger-Gibson Community Health Center.  During her two year directorship, Dr. Miller also taught students of dental medicine on their externship rotation, earning the title of Assistant Clinical Professor at Boston University Goldman School of Dentistry and Harvard School of Dental Medicine.
 				</p>
                 <p>
-					Dr. Miller keeps her skills and knowledge current on advancements in general dentistry and dental technologies by regularly attending professional training that involves multidisciplinary treatment planning. She is an active member of the <a href="http://www.massdental.org" alt="Click here to go to the Massachusetts Dental Society website." title="Click here to go to the Massachusetts Dental Society website." target="_blank">Massachusetts Dental Society</a> and the <a href="http://www.ada.org" alt="Click here to go to the American Dental Association website." title="Click here to go to the American Dental Association website." target="_blank">American Dental Association</a>.
+					Dr. Miller keeps her skills and knowledge current on advancements in general dentistry and dental technologies by regularly attending professional training that involves multidisciplinary treatment planning. She is an active member of the <a href="https://www.massdental.org" alt="Click here to go to the Massachusetts Dental Society website." title="Click here to go to the Massachusetts Dental Society website." target="_blank">Massachusetts Dental Society</a> and the <a href="https://www.ada.org" alt="Click here to go to the American Dental Association website." title="Click here to go to the American Dental Association website." target="_blank">American Dental Association</a>.
 				</p>
                 <p>
 					Dr. Miller was born and raised in Montreal, Canada, and is fluent in both English and French. In her spare time, she enjoys reading, hiking in the White Mountains of New Hampshire, ballroom dancing and getting her beloved husband fat by baking delicious desserts. Her pet peeve is proper spelling.
