--- a/patient-resources.html
+++ b/patient-resources.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "https://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="https://www.w3.org/1999/xhtml">
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
@@ -8,11 +8,11 @@
     <title>Patient Resources: Super Smiles Family Dentistry</title>
     
     <link href="css/reset.css" rel="stylesheet" type="text/css" />
-    <link href='http://fonts.googleapis.com/css?family=Oxygen:400,300,700' rel='stylesheet' type='text/css' lang="english"/>
+    <link href='https://fonts.googleapis.com/css?family=Oxygen:400,300,700' rel='stylesheet' type='text/css' lang="english"/>
     <link href="css/style_supersmiles_main.css" rel="stylesheet" type="text/css" lang="english"/>
     <link href="css/style_supersmiles_hkdesign.css" rel="stylesheet" type="text/css" lang="english"/>
     
-<!-- Lightbox2 PhotoGallery - source: http://lokeshdhakar.com/projects/lightbox2/ -->
+<!-- Lightbox2 PhotoGallery - source: https://lokeshdhakar.com/projects/lightbox2/ -->
     <link href="js_lightbox/css/lightbox.css" rel="stylesheet" />
     <script type="text/javascript" src="js_lightbox/js/jquery-1.11.0.min.js"></script>
 	<script type="text/javascript" src="js_lightbox/js/lightbox.min.js"></script>
@@ -74,52 +74,52 @@
                 </p> 
 						<ul>
 							<li>
-								<a href="http://www.aetnadental.com" alt="Link to Aetna Dental" title="Link to Aetna Dental">
+								<a href="https://www.aetnadental.com" alt="Link to Aetna Dental" title="Link to Aetna Dental">
 									Aetna
 								</a>
 							</li>
 							<li>
-								<a href="http://www.altusdental.com" alt="Link to Altus Dental" title="Link to Altus Dental">
+								<a href="https://www.altusdental.com" alt="Link to Altus Dental" title="Link to Altus Dental">
 									Altus
 								</a>
 							</li>
 							<li>
-								<a href="http://www.bcbs.com" alt="Link to Blue Cross Blue Shield dental insurance" title="Link to Blue Cross Blue Shield dental insurance">
+								<a href="https://www.bcbs.com" alt="Link to Blue Cross Blue Shield dental insurance" title="Link to Blue Cross Blue Shield dental insurance">
 									Blue Cross Blue Shield
 								</a>
 							</li>
 							<li>
-								<a href="http://www.cigna.com" alt="Link to Cigna dental insurance" title="Link to Cigna dental insurance">
+								<a href="https://www.cigna.com" alt="Link to Cigna dental insurance" title="Link to Cigna dental insurance">
 									Cigna
 								</a>
 							</li>
 							<li>
-								<a href="http://www.deltadental.com" alt="Link to Delta Dental dental insurance" title="Link to Delta Dental dental insurance">
+								<a href="https://www.deltadental.com" alt="Link to Delta Dental dental insurance" title="Link to Delta Dental dental insurance">
 									Delta Dental
 								</a>
 							</li>
 							<li>
-								<a href="http://www.guardiananytime.com" alt="Link to Guardian dental insurance" title="Link to Guardian dental insurance">
+								<a href="https://www.guardiananytime.com" alt="Link to Guardian dental insurance" title="Link to Guardian dental insurance">
 									Guardian
 								</a>
 							</li>
 							<li>
-								<a href="http://masshealth-dental.net" alt="Link to MassHealth dental insurance" title="Link to MassHealth dental insurance">
+								<a href="https://www.masshealth-dental.net/" alt="Link to MassHealth dental insurance" title="Link to MassHealth dental insurance">
 									MassHealth
 								</a>
 							</li>
 							<li>
-								<a href="http://www.medicaid.gov/" alt="Link to Medicaid dental insurance" title="Link to Medicaid dental insurance">
+								<a href="https://www.medicaid.gov/" alt="Link to Medicaid dental insurance" title="Link to Medicaid dental insurance">
 									Medicaid
 								</a>
 							</li>
 							<li>
-								<a href="http://www.metlife.com" alt="Link to MetLife dental insurance" title="Link to MetLife dental insurance">
+								<a href="https://www.metlife.com" alt="Link to MetLife dental insurance" title="Link to MetLife dental insurance">
 									MetLife
 								</a>
 							</li>
 							<li>
-								<a href="http://www.sciondental.com" alt="Link to Scion dental Insurance" title="Link to Scion dental insurance">
+								<a href="https://www.skygenusa.com" alt="Link to Scion/Skygen dental Insurance" title="Link to Scion / Skygen dental insurance">
 									Scion
 								</a>
 							</li>
