--- a/services-cosmetic.html
+++ b/services-cosmetic.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "https://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="https://www.w3.org/1999/xhtml">
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
@@ -8,12 +8,12 @@
     <title>Services: Cosmetic Treatment, Preventive Treatment, General Treatment - Super Smiles Family Dentistry</title>
     
     <link href="css/reset.css" rel="stylesheet" type="text/css" />
-    <link href='http://fonts.googleapis.com/css?family=Oxygen:400,300,700' rel='stylesheet' type='text/css' lang="english"/>
+    <link href='https://fonts.googleapis.com/css?family=Oxygen:400,300,700' rel='stylesheet' type='text/css' lang="english"/>
     <link href="css/style_supersmiles_main.css" rel="stylesheet" type="text/css" lang="english"/>
     <link href="css/style_supersmiles_hkdesign.css" rel="stylesheet" type="text/css" lang="english"/>
     <link href="css/style_supermiles_services.css" rel="stylesheet" type="text/css" lang="english"/>
     
-<!-- Lightbox2 PhotoGallery - source: http://lokeshdhakar.com/projects/lightbox2/ -->
+<!-- Lightbox2 PhotoGallery - source: https://lokeshdhakar.com/projects/lightbox2/ -->
     <link href="js_lightbox/css/lightbox.css" rel="stylesheet" />
     <script type="text/javascript" src="js_lightbox/js/jquery-1.11.0.min.js"></script>
 	<script type="text/javascript" src="js_lightbox/js/lightbox.min.js"></script>
@@ -86,8 +86,8 @@
                <h2>Six Month Smile Cosmetic Braces</h2>
                <img src="images/services/cosmetic-braces-BeforeAfter_580x170.jpg" alt="Before and After photos." title="Before and After photos."/>
                <p>Six Month Smiles (6MS) is a cosmetically focused, short term treatment to straighten teeth for adults (15yrs and older). Like traditional metal braces, 6MS uses slow controlled force to move your teeth into place but unlike traditional braces, the 6MS braces are clear and the wire is tooth colored so you will not be showing a "metal mouth". Because it is a cosmetically focused treatment, the average time of completion is around 6 months. At the consultation appointment, the doctor will evaluate your overall smile and determine the length of treatment.</p>
-              <p>For more information, visit: <a href="http://www.6monthsmiles.com" alt="Click here to visit the Six Month Super Smiles website." title="Click here to visit the Six Month Super Smiles website." target="_blank">www.6monthsmiles.com</a>.</p>
-              <a href="http://www.6monthsmiles.com" alt="Click here to visit the Six Month Super Smiles website." title="Click here to visit the Six Month Super Smiles website." target="_blank"><img class="six-month-smile" src="images/services/Six_Month_Smiles_Logo_For_Web.jpg" alt="Click here to visit Six Month Super Smiles." title="Click here to visit Six Month Super Smiles."/></a>
+              <p>For more information, visit: <a href="https://www.6monthsmiles.com" alt="Click here to visit the Six Month Super Smiles website." title="Click here to visit the Six Month Super Smiles website." target="_blank">www.6monthsmiles.com</a>.</p>
+              <a href="https://www.6monthsmiles.com" alt="Click here to visit the Six Month Super Smiles website." title="Click here to visit the Six Month Super Smiles website." target="_blank"><img class="six-month-smile" src="images/services/Six_Month_Smiles_Logo_For_Web.jpg" alt="Click here to visit Six Month Super Smiles." title="Click here to visit Six Month Super Smiles."/></a>
               <h2>More Services:</h2>
               <ul id="more-services">
                     <li><a href="services-preventive.html">Preventive Treatment</a></li>
