--- a/services-general.html
+++ b/services-general.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "https://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="https://www.w3.org/1999/xhtml">
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
@@ -8,12 +8,12 @@
     <title>Services: General Treatment, Preventive Treatment, Cosmetic Treatment - Super Smiles Family Dentistry</title>
     
     <link href="css/reset.css" rel="stylesheet" type="text/css" />
-    <link href='http://fonts.googleapis.com/css?family=Oxygen:400,300,700' rel='stylesheet' type='text/css' lang="english"/>
+    <link href='https://fonts.googleapis.com/css?family=Oxygen:400,300,700' rel='stylesheet' type='text/css' lang="english"/>
     <link href="css/style_supersmiles_main.css" rel="stylesheet" type="text/css" lang="english"/>
     <link href="css/style_supermiles_services.css" rel="stylesheet" type="text/css" lang="english"/>
     <link href="css/style_supersmiles_hkdesign.css" rel="stylesheet" type="text/css" lang="english"/>
     
-<!-- Lightbox2 PhotoGallery - source: http://lokeshdhakar.com/projects/lightbox2/ -->
+<!-- Lightbox2 PhotoGallery - source: https://lokeshdhakar.com/projects/lightbox2/ -->
     <link href="js_lightbox/css/lightbox.css" rel="stylesheet" />
     <script type="text/javascript" src="js_lightbox/js/jquery-1.11.0.min.js"></script>
 	<script type="text/javascript" src="js_lightbox/js/lightbox.min.js"></script>
