Removed MassHealth from list of insurances.

--- a/index.html
+++ b/index.html
@@ -124,7 +124,9 @@
 					All Insurances Accepted
 				</h3>
                 <p>
-					<a href="patient-resources.html" alt="Patient Resources: Click to learn about payment options and accepted insurance providers." title="Patient Resources: Click to learn about payment options and accepted insurance providers.">We work with all insurance providers and we proudly accept MassHealth.</a>
+				We work with 
+					<a href="patient-resources.html" alt="Patient Resources: Click to learn about payment options and accepted insurance providers." title="Patient Resources: Click to learn about payment options and accepted insurance providers.">all insurance providers, are in-network with a broad selection of insurances, </a> 
+					and make every effort to ensure you have all the information you need to successfully navigate through your insurance plan.
                 </p>
 				<h2>
 					Our Location
